--- a/app/views/application/admin_dashboard.html.erb
+++ b/app/views/application/admin_dashboard.html.erb
@@ -1,9 +1,4 @@
-<h1 class="center">Admin Dashboard</h1>
 
-<h3 class="greeting">Welcome <%= current_user.first_name %></h3>
-<%= link_to "Edit My Profile", edit_user_path(current_user) %><br><br>
-
-<%= link_to "View Items Inventory", admin_items_path %>
 
 <h3>Current Count of Orders by Status</h3>
 <p>Ordered: <%= @all_orders.ordered.count %> </p>
@@ -38,8 +33,221 @@
       <td><%= order.created_at.strftime("%d %b. %Y") %></td>
       <td><%= order.updated_at.strftime("%l:%M%P, %d %b. %Y") %></td>
       <td><%= order.total_price %></td>
-      <td><%= button_to "Cancel", admin_order_path(order, :status => "cancelled"), method: :put, :disabled => order.completed? || order.cancelled? %></td>
-      <td><%= button_to "Mark as Paid", admin_order_path(order, :status => "paid"), method: :put, :disabled => order.paid? || order.completed? || order.cancelled? %></td>
-      <td><%= button_to "Mark as Completed", admin_order_path(order, :status => "completed"), method: :put, :disabled => order.completed? || order.cancelled? || order.ordered? %></td>
-            
+      <td><%= button_to "Cancel", admin_order_path(order, :status => "cancelled"), method: :put, :disabled => order.completed? || order.cancelled? %>
+          <%= button_to "Mark as Paid", admin_order_path(order, :status => "paid"), method: :put, :disabled => order.paid? || order.completed? || order.cancelled? %>
+          <%= button_to "Mark as Completed", admin_order_path(order, :status => "completed"), method: :put, :disabled => order.completed? || order.cancelled? || order.ordered? %></td>
+
       <% end %>
+
+      <body data-gr-c-s-loaded="true">
+
+    <div id="wrapper">
+
+        <!-- Navigation -->
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html"><%= link_to "PogHogs Admin", '/', id: "logo" %></a>
+            </div>
+            <!-- Top Menu Items -->
+            <ul class="nav navbar-right top-nav">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i><%= current_user.first_name %><b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="#"><i class="fa fa-fw fa-user"></i> <%= link_to "Edit My Profile", edit_user_path(current_user) %></a>
+                        </li>
+                        <li class="divider"></li>
+                        <li>
+                            <a href="#"><i class="fa fa-fw fa-power-off"></i><%= link_to "Log out", logout_path, method: :delete %></a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+            <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav side-nav">
+                    <li class="active">
+                        <a href="/admin/dashboard"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+                    </li>
+                    <li>
+                        <a href="/admin/items"><i class="fa fa-fw fa-bar-chart-o"></i> Items Index</a>
+                    </li>
+                    <li>
+                        <a href="/admin/items/new"><i class="fa fa-fw fa-table"></i> Create a New Item</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </nav>
+
+        <div id="page-wrapper">
+
+            <div class="container-fluid">
+
+                <!-- Page Heading -->
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h1 class="page-header">
+                            Admin Dashboard <small>Orders Overview</small>
+                        </h1>
+                    </div>
+                </div>
+
+                <!-- /.row -->
+
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title"><i class="fa fa-bar-chart-o fa-fw"></i> Area Chart</h3>
+                            </div>
+                            <div class="panel-body">
+  iPhone:
+  6,810
+</div><div class="morris-hover-point" style="color: #7A92A3">
+  iPad:
+  1,914
+</div><div class="morris-hover-point" style="color: #4da74d">
+  iPod Touch:
+  2,293
+</div></div></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.row -->
+
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title"><i class="fa fa-long-arrow-right fa-fw"></i> Donut Chart</h3>
+                            </div>
+                            <div class="panel-body">
+                                <div class="text-right">
+                                    <a href="#">View Details <i class="fa fa-arrow-circle-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title"><i class="fa fa-clock-o fa-fw"></i> Tasks Panel</h3>
+                            </div>
+                            <div class="panel-body">
+                                <div class="list-group">
+                                    <a href="#" class="list-group-item">
+                                        <span class="badge">just now</span>
+                                        <i class="fa fa-fw fa-calendar"></i> Calendar updated
+                                    </a>
+                                    <a href="#" class="list-group-item">
+                                        <span class="badge">4 minutes ago</span>
+                                        <i class="fa fa-fw fa-comment"></i> Commented on a post
+                                    </a>
+                                    <a href="#" class="list-group-item">
+                                        <span class="badge">23 minutes ago</span>
+                                        <i class="fa fa-fw fa-truck"></i> Order 392 shipped
+                                    </a>
+                                    <a href="#" class="list-group-item">
+                                        <span class="badge">46 minutes ago</span>
+                                        <i class="fa fa-fw fa-money"></i> Invoice 653 has been paid
+                                    </a>
+                                    <a href="#" class="list-group-item">
+                                        <span class="badge">1 hour ago</span>
+                                        <i class="fa fa-fw fa-user"></i> A new user has been added
+                                    </a>
+                                    <a href="#" class="list-group-item">
+                                        <span class="badge">2 hours ago</span>
+                                        <i class="fa fa-fw fa-check"></i> Completed task: "pick up dry cleaning"
+                                    </a>
+                                    <a href="#" class="list-group-item">
+                                        <span class="badge">yesterday</span>
+                                        <i class="fa fa-fw fa-globe"></i> Saved the world
+                                    </a>
+                                    <a href="#" class="list-group-item">
+                                        <span class="badge">two days ago</span>
+                                        <i class="fa fa-fw fa-check"></i> Completed task: "fix error on sales page"
+                                    </a>
+                                </div>
+                                <div class="text-right">
+                                    <a href="#">View All Activity <i class="fa fa-arrow-circle-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title"><i class="fa fa-money fa-fw"></i> Transactions Panel</h3>
+                            </div>
+                            <div class="panel-body">
+                                <div class="table-responsive">
+                                    <table class="table table-bordered table-hover table-striped">
+                                        <thead>
+                                            <tr>
+                                                <th>Order #</th>
+                                                <th>Current Status</th>
+                                                <th>Date Placed</th>
+                                                <th>Updated at</th>
+                                                <th>Amount (USD)</th>
+                                                <th>Change Status</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                              <% @orders.order(:id).each do |order| %>
+                                              <td><%= link_to "Order Number: #{order.id}", admin_order_path(order)%></td>
+                                              <td><%= order.status.upcase %></td>
+                                              <td><%= order.created_at.strftime("%d %b. %Y") %></td>
+                                              <td><%= order.updated_at.strftime("%l:%M%P, %d %b. %Y") %></td>
+                                              <td>$<%= order.total_price %></td>
+                                              <td><%= button_to "Cancel", admin_order_path(order, :status => "cancelled"), method: :put, :disabled => order.completed? || order.cancelled? %>
+                                                  <%= button_to "Mark as Paid", admin_order_path(order, :status => "paid"), method: :put, :disabled => order.paid? || order.completed? || order.cancelled? %>
+                                                  <%= button_to "Mark as Completed", admin_order_path(order, :status => "completed"), method: :put, :disabled => order.completed? || order.cancelled? || order.ordered? %></td>
+
+                                              <% end %>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <div class="text-right">
+                                    <a href="#">View All Transactions <i class="fa fa-arrow-circle-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.row -->
+
+            </div>
+            <!-- /.container-fluid -->
+
+        </div>
+        <!-- /#page-wrapper -->
+
+    </div>
+    <!-- /#wrapper -->
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Morris Charts JavaScript -->
+    <script src="js/plugins/morris/raphael.min.js"></script>
+    <script src="js/plugins/morris/morris.min.js"></script>
+    <script src="js/plugins/morris/morris-data.js"></script>
+
+
+
+
+</body>
