--- a/app/views/application/admin_dashboard.html.erb
+++ b/app/views/application/admin_dashboard.html.erb
@@ -1,44 +1,4 @@
 
-
-<h3>Current Count of Orders by Status</h3>
-<p>Ordered: <%= @all_orders.ordered.count %> </p>
-<p>Paid: <%= @all_orders.paid.count %></p>
-<p>Completed: <%= @all_orders.completed.count %></p>
-<p>Cancelled: <%= @all_orders.cancelled.count %></p><br>
-
-<h4 class="center">Orders</h4><br>
-<div class="center">
-  <%= link_to "All Orders |", admin_dashboard_path(:current_status => nil) %>
-  <%= link_to "Ordered |", admin_dashboard_path(:current_status => "ordered") %>
-  <%= link_to "Paid |", admin_dashboard_path(:current_status => "paid") %>
-  <%= link_to "Completed |", admin_dashboard_path(:current_status => "completed") %>
-  <%= link_to "Cancelled", admin_dashboard_path(:current_status => "cancelled") %>
-</div><br>
-
-<div class="order_list">
-  <table style="width:100%">
-    <tr>
-      <th>Order Number</th>
-      <th>Current Status</th>
-      <th>Date Placed</th>
-      <th>Updated at</th>
-      <th>Total</th>
-      <th></th>
-      <th>Change Status</th>
-    </tr>
-    <tr>
-      <% @orders.order(:id).each do |order| %>
-      <td><%= link_to "Order Number: #{order.id}", admin_order_path(order)%></td>
-      <td><%= order.status.upcase %></td>
-      <td><%= order.created_at.strftime("%d %b. %Y") %></td>
-      <td><%= order.updated_at.strftime("%l:%M%P, %d %b. %Y") %></td>
-      <td><%= order.total_price %></td>
-      <td><%= button_to "Cancel", admin_order_path(order, :status => "cancelled"), method: :put, :disabled => order.completed? || order.cancelled? %>
-          <%= button_to "Mark as Paid", admin_order_path(order, :status => "paid"), method: :put, :disabled => order.paid? || order.completed? || order.cancelled? %>
-          <%= button_to "Mark as Completed", admin_order_path(order, :status => "completed"), method: :put, :disabled => order.completed? || order.cancelled? || order.ordered? %></td>
-
-      <% end %>
-
       <body data-gr-c-s-loaded="true">
 
     <div id="wrapper">
@@ -93,12 +53,40 @@
 
                 <!-- Page Heading -->
                 <div class="row">
-                    <div class="col-lg-12">
-                        <h1 class="page-header">
-                            Admin Dashboard <small>Orders Overview</small>
-                        </h1>
+                    <div class="col-lg-4">
+                      <div class="panel panel-default">
+                        <div class="panel-heading">
+                          <h3 class="panel-title"><i class="fa fa-clock-o fa-fw"></i> Current Count of Orders by Status</h3>
+                        </div>
+                        <div class="panel-body">
+                          <div class="list-group">
+                            <a class="list-group-item">
+                              <span class="badge"><%= @all_orders.ordered.count %></span>
+                              <i class="fa fa-fw fa-calendar"></i> Ordered:
+                            </a>
+                            <a class="list-group-item">
+                              <span class="badge"><%= @all_orders.paid.count %></span>
+                              <i class="fa fa-fw fa-comment"></i> Paid:
+                            </a>
+                            <a class="list-group-item">
+                              <span class="badge"><%= @all_orders.completed.count %></span>
+                              <i class="fa fa-fw fa-truck"></i> Completed:
+                            </a>
+                            <a class="list-group-item">
+                              <span class="badge"><%= @all_orders.cancelled.count %></span>
+                              <i class="fa fa-fw fa-money"></i> Cancelled:
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-8">
+                      <h1 class="page-header">
+                        Admin Dashboard <small>Orders Overview</small>
+                      </h1>
                     </div>
                 </div>
+
 
                 <!-- /.row -->
 
@@ -106,88 +94,21 @@
                     <div class="col-lg-12">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-bar-chart-o fa-fw"></i> Area Chart</h3>
-                            </div>
-                            <div class="panel-body">
-  iPhone:
-  6,810
-</div><div class="morris-hover-point" style="color: #7A92A3">
-  iPad:
-  1,914
-</div><div class="morris-hover-point" style="color: #4da74d">
-  iPod Touch:
-  2,293
-</div></div></div>
+                                <h3 class="panel-title center"><i class="fa fa-money fa-fw"></i> Orders</h3>
+                                <div class="center">
+                                  <%= link_to "All Orders |", admin_dashboard_path(:current_status => nil) %>
+                                  <%= link_to "Ordered |", admin_dashboard_path(:current_status => "ordered") %>
+                                  <%= link_to "Paid |", admin_dashboard_path(:current_status => "paid") %>
+                                  <%= link_to "Completed |", admin_dashboard_path(:current_status => "completed") %>
+                                  <%= link_to "Cancelled", admin_dashboard_path(:current_status => "cancelled") %>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- /.row -->
-
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-long-arrow-right fa-fw"></i> Donut Chart</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div class="text-right">
-                                    <a href="#">View Details <i class="fa fa-arrow-circle-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-clock-o fa-fw"></i> Tasks Panel</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div class="list-group">
-                                    <a href="#" class="list-group-item">
-                                        <span class="badge">just now</span>
-                                        <i class="fa fa-fw fa-calendar"></i> Calendar updated
-                                    </a>
-                                    <a href="#" class="list-group-item">
-                                        <span class="badge">4 minutes ago</span>
-                                        <i class="fa fa-fw fa-comment"></i> Commented on a post
-                                    </a>
-                                    <a href="#" class="list-group-item">
-                                        <span class="badge">23 minutes ago</span>
-                                        <i class="fa fa-fw fa-truck"></i> Order 392 shipped
-                                    </a>
-                                    <a href="#" class="list-group-item">
-                                        <span class="badge">46 minutes ago</span>
-                                        <i class="fa fa-fw fa-money"></i> Invoice 653 has been paid
-                                    </a>
-                                    <a href="#" class="list-group-item">
-                                        <span class="badge">1 hour ago</span>
-                                        <i class="fa fa-fw fa-user"></i> A new user has been added
-                                    </a>
-                                    <a href="#" class="list-group-item">
-                                        <span class="badge">2 hours ago</span>
-                                        <i class="fa fa-fw fa-check"></i> Completed task: "pick up dry cleaning"
-                                    </a>
-                                    <a href="#" class="list-group-item">
-                                        <span class="badge">yesterday</span>
-                                        <i class="fa fa-fw fa-globe"></i> Saved the world
-                                    </a>
-                                    <a href="#" class="list-group-item">
-                                        <span class="badge">two days ago</span>
-                                        <i class="fa fa-fw fa-check"></i> Completed task: "fix error on sales page"
-                                    </a>
-                                </div>
-                                <div class="text-right">
-                                    <a href="#">View All Activity <i class="fa fa-arrow-circle-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-money fa-fw"></i> Transactions Panel</h3>
-                            </div>
+                  <!-- /.row -->
+                      <div class="row">
+                          <div class="col-lg-12">
                             <div class="panel-body">
                                 <div class="table-responsive">
                                     <table class="table table-bordered table-hover table-striped">
@@ -218,13 +139,10 @@
                                         </tbody>
                                     </table>
                                 </div>
-                                <div class="text-right">
-                                    <a href="#">View All Transactions <i class="fa fa-arrow-circle-right"></i></a>
-                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
+
                 <!-- /.row -->
 
             </div>
