--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,25 +1,142 @@
-<h1>All Items</h1>
+<body data-gr-c-s-loaded="true">
 
-<div class="cart_list">
-  <table style="width:100%">
-    <tr>
-      <th>Item</th>
-      <th>Description</th>
-      <th>Price</th>
-      <th>Status</th>
-    </tr>
+<div id="wrapper">
 
-    <% @items.each do |item| %>
-        <div class="<%= item.title %>">
-          <tr>
-            <td><%= link_to item.title, category_item_path(item.category, item) %>
-                <div class="img"><%= image_tag(item.image_path) %></td></div>
-            <td><%= item.description %></td>
-            <td><%= item.price  %></td>
-            <td><%= item.status %></td>
-            <td><%= link_to "Edit", edit_admin_item_path(item) %></td>
-          </tr>
+  <!-- Navigation -->
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html"><%= link_to "PogHogs Admin", '/', id: "logo" %></a>
+      </div>
+      <!-- Top Menu Items -->
+      <ul class="nav navbar-right top-nav">
+          <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i><%= current_user.first_name %><b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                  <li>
+                      <a href="#"><i class="fa fa-fw fa-user"></i> <%= link_to "Edit My Profile", edit_user_path(current_user) %></a>
+                  </li>
+                  <li class="divider"></li>
+                  <li>
+                      <a href="#"><i class="fa fa-fw fa-power-off"></i><%= link_to "Log out", logout_path, method: :delete %></a>
+                  </li>
+              </ul>
+          </li>
+      </ul>
+      <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
+      <div class="collapse navbar-collapse navbar-ex1-collapse">
+          <ul class="nav navbar-nav side-nav">
+              <li class="active">
+                  <a href="/admin/dashboard"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+              </li>
+              <li>
+                  <a href="/admin/items"><i class="fa fa-fw fa-bar-chart-o"></i> Items Index</a>
+              </li>
+              <li>
+                  <a href="/admin/items/new"><i class="fa fa-fw fa-table"></i> Create a New Item</a>
+              </li>
+          </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+  </nav>
+<!-- Table Header Row -->
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title center"><i class="fa fa-money fa-fw"></i> Items Catalogue</h3>
+                <div class="center">
+                </div>
+            </div>
         </div>
-    <% end %>
-  </table>
+    </div>
 </div>
+<!-- Items Table Row -->
+<div class="row">
+    <div class="col-lg-12">
+      <div class="panel-body">
+          <div class="table-responsive">
+              <table class="table table-bordered table-hover table-striped">
+                  <thead>
+                      <tr>
+                          <th>Item Photo</th>
+                          <th>Item</th>
+                          <th>Description</th>
+                          <th>Price</th>
+                          <th>Status</th>
+                          <th>Edit Item</th>
+                      </tr>
+                  </thead>
+                  <tbody>
+                      <tr>
+                        <% @items.each do |item| %>
+                            <div class="<%= item.title %>">
+                              <tr>
+                                <td><div class="img"><%= link_to image_tag(item.image_path), category_item_path(item.category, item) %></td></div>
+                                <td><%= item.title %></td>
+                                <td><%= item.description %></td>
+                                <td><%= item.price  %></td>
+                                <td><%= item.status %></td>
+                                <td><%= button_to "Edit", edit_admin_item_path(item), method: :get, class: "btn btn-primary" %></td>
+                              </tr>
+                            </div>
+                        <% end %>
+                      </tr>
+                  </tbody>
+              </table>
+          </div>
+      </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- jQuery -->
+<script src="js/jquery.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
+
+<!-- Morris Charts JavaScript -->
+<script src="js/plugins/morris/raphael.min.js"></script>
+<script src="js/plugins/morris/morris.min.js"></script>
+<script src="js/plugins/morris/morris-data.js"></script>
+
+
+<!-- Footer -->
+<footer>
+  <div class="row">
+    <div class="col-lg-12">
+      <p>Copyright &copy; PogHogs 2017</p>
+    </div>
+  </div>
+</footer>
+
+</body>
