--- a/app/views/application/admin_dashboard.html.erb
+++ b/app/views/application/admin_dashboard.html.erb
@@ -51,7 +51,7 @@
 
             <div class="container-fluid">
 
-                <!-- Page Heading -->
+                <!-- Orders Count Table -->
                 <div class="row">
                     <div class="col-lg-4">
                       <div class="panel panel-default">
@@ -88,7 +88,7 @@
                 </div>
 
 
-                <!-- /.row -->
+                <!-- Table Heading Row -->
 
                 <div class="row">
                     <div class="col-lg-12">
@@ -106,7 +106,7 @@
                         </div>
                     </div>
                 </div>
-                  <!-- /.row -->
+                  <!-- Orders Table Row -->
                       <div class="row">
                           <div class="col-lg-12">
                             <div class="panel-body">
@@ -166,6 +166,13 @@
     <script src="js/plugins/morris/morris-data.js"></script>
 
 
-
+    <!-- Footer -->
+    <footer>
+      <div class="row">
+        <div class="col-lg-12">
+          <p>Copyright &copy; PogHogs 2017</p>
+        </div>
+      </div>
+    </footer>
 
 </body>
